--- a/404.html
+++ b/404.html
@@ -1,70 +1,6 @@
 ---
-layout: 404
+layout: base
 title: Not found
 ---
 
-    <div class="main-container">
-      <section class="space-sm">
-        <div class="container">
-          <div class="row">
-            <div class="col text-center">
-              <img alt="Image" src="{{ '/dist/images/logo-black-small-gray.png' | prepend: site.baseurl }}" />
-            </div>
-            <!--end of col-->
-          </div>
-          <!--end of row-->
-        </div>
-        <!--end of container-->
-      </section>
-      <section class="height-80 flush-with-above">
-        <div class="container">
-          <div class="row justify-content-between align-items-center">
-            <div class="col-12 col-md-7 col-lg-5 mb-4 text-center text-md-left">
-              <h1 class="display-3">Sorry! :'(</h1>
-              <h2 class="lead">The page you are trying to access does not exist.</h2> <h2 class="lead">We apologise for any inconvenience.</h2>
-              <div>
-                <a href="{{ site.url }}" class="btn btn-primary btn-lg">Home</a>
-              </div>
-            </div>
-            <!--end of col-->
-          </div>
-          <!--end of row-->
-        </div>
-        <!--end of container-->
-      </section>
-      <!--end of section-->
-    </div>
-    <footer class="position-md-absolute right-md-0 bottom-md-0 left-md-0">
-      <div class="container">
-        <div class="d-flex justify-content-between align-items-center space-1">
-          <!-- Copyright -->
-          <p class="small text-muted mb-0">&copy; SopanGlobal 2019</p>
-          <!-- End Copyright -->
-  
-          <!-- Social Networks -->
-          <ul class="list-inline mb-0">
-            <li class="list-inline-item">
-              <a class="btn btn-sm btn-icon btn-soft-secondary btn-bg-transparent" href="#">
-                <span class="socicon-facebook btn-icon__inner"></span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn btn-sm btn-icon btn-soft-secondary btn-bg-transparent" href="#">
-                <span class="socicon-linkedin btn-icon__inner"></span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn btn-sm btn-icon btn-soft-secondary btn-bg-transparent" href="#">
-                <span class="socicon-twitter btn-icon__inner"></span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn btn-sm btn-icon btn-soft-secondary btn-bg-transparent" href="#">
-                <span class="socicon-viber btn-icon__inner"></span>
-              </a>
-            </li>
-          </ul>
-          <!-- End Social Networks -->
-        </div>
-      </div>
-    </footer>
+<h1>The page doesn't exist.</h1>
