--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: base
           </div>
           <div class="o-half o-half--padded o-half--hero-stacked">
             <p class="editable u-type-panel-text u-m0">
-              It is a fusion of creativity, imagination and innovation. <br /><a href="https://www.youtube.com/watch?v=3vPCpQTJkYo" class="c-link c-link--outbound u-type-panel-text u-m0">Watch on YouTube</a>
+              Witness the fusion of creativity, imagination, and innovation. <br /><a href="https://www.youtube.com/watch?v=3vPCpQTJkYo" class="c-link c-link--outbound u-type-panel-text u-m0">Watch on YouTube</a>
             </p>
           </div>
         </div>
@@ -78,7 +78,7 @@ layout: base
       <div class="o-row u-flex-wrap">
         <div class="o-half u-w100@column-min-down">
             <img src="https://images.unsplash.com/photo-1531498860502-7c67cf02f657" 
-    alt="What is TwitchCon?" 
+    alt="What is NEXT?" 
     class="u-responsive">
         </div>
         <div class="o-half o-half--padded u-mt2 u-w100@column-min-down">
