Adds Detailed Content for every Next event and updates footer

--- a/dota_registration.html
+++ b/dota_registration.html
@@ -35,7 +35,7 @@ permalink: /dota-at-next/registration/
     <br />
         <div class="o-text-column u-mb5">
           <p>This form should be used for registration of Dota 2 game, going to be organized at NEXT 2019. Please fill all the fields with appropriate information.</p> 
-            <p>Before you proceed, make sure you've read the instructions. If you haven't read it yet, <a href="#">click here.</a></p>
+            <p>Before you proceed, make sure you've read the instructions. If you haven't read it yet, <a href="{{ '/dota-at-next/' | prepend: site.baseurl}}">click here.</a></p>
       
             <div class="c-form">
                     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='/thank-you/';}"></iframe>
@@ -82,7 +82,7 @@ permalink: /dota-at-next/registration/
                     <label class="c-form__label">Substitute Member Name (NPR 500 for substitute)</label> 
                     <input type="text" class="c-form__input" placeholder="John Shah" name="entry.1381995059"  required >
                     <br /><br />
-                    <input class="c-button" type="submit"> 
+                    <input class="c-button" type="submit" value="Register"> 
                   </form>
         
         </div>
