--- a/hackathon_register.html
+++ b/hackathon_register.html
@@ -35,7 +35,7 @@ permalink: /hackathon-at-next/registration/
     <br />
         <div class="o-text-column u-mb5">
           <p>This form should be used for registration at Hackathon, going to be organized at NEXT 2019. Please fill all the fields with appropriate information.</p> 
-            <p>Before you proceed, make sure you've read the instructions. If you haven't read it yet, <a href="#">click here.</a></p>
+            <p>Before you proceed, make sure you've read the instructions. If you haven't read it yet, <a href="{{ '/hackathon-at-next/' | prepend: site.baseurl}}">click here.</a></p>
       
     <div class="c-form">
             <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='/thank-you/';}"></iframe>
@@ -79,7 +79,7 @@ permalink: /hackathon-at-next/registration/
             <label class="c-form__label">What do you expect from us?</label> 
             <input type="text" class="c-form__input" placeholder="I expect..." name="entry.876329403" required >
             <br /><br />
-            <input class="c-button" type="submit"> 
+            <input class="c-button" type="submit" value="Register"> 
           </form>
         
         </div>
