--- a/fifa_registration.html
+++ b/fifa_registration.html
@@ -35,7 +35,7 @@ permalink: /fifa-at-next/registration/
     <br />
         <div class="o-text-column u-mb5">
           <p>This form should be used for registration of FIFA game, going to be organized at NEXT 2019. Please fill all the fields with appropriate information.</p> 
-            <p>Before you proceed, make sure you've read the instructions. If you haven't read it yet, <a href="#">click here.</a></p>
+            <p>Before you proceed, make sure you've read the instructions. If you haven't read it yet, <a href="{{ '/fifa-at-next/' | prepend: site.baseurl}}">click here.</a></p>
       
             <div class="c-form">
                     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='/thank-you/';}"></iframe>
@@ -57,7 +57,7 @@ permalink: /fifa-at-next/registration/
                     <label class="c-form__label">Football Jersey Choice(e.g. Barcelona, Arsenal?)</label> 
                     <input type="text" class="c-form__input" placeholder="Ram Sharma" name="entry.1432770785">
                     <br /><br />
-                    <input class="c-button" type="submit"> 
+                    <input class="c-button" type="submit" value="Register"> 
                   </form>
         
         </div>
