Optimized Logic Battle

--- a/rapidcoding.html
+++ b/rapidcoding.html
@@ -46,7 +46,7 @@ permalink: /rapid-coding-at-next/
         <p><strong>In this competition, time and space complexity of the program or algorithm won’t be taken into consideration.</strong></p>
         <br />
         <h2 class="u-type-h4">Entry Fee</h2>
-        <p>The entry fee per team is NPR 200/-<br /><strong>Maximum of 2 members are allowed in a team.</strong></p>
+        <p>The entry fee per team is NPR 200<br /><strong>Maximum of 2 members are allowed in a team.</strong></p>
 
         <br />
 
@@ -79,7 +79,7 @@ permalink: /rapid-coding-at-next/
         
       <h2 class="u-type-h4">Deadline</h2>
 
-      <p>The <strong>deadline for form submission is 12th July, 2019</strong>.</p>
+      <p>The deadline for form submission is <strong>12 July, 2019</strong>.</p>
       <br />
 
       <h2 class="u-type-h4">Contact Point</h2>
