--- a/call-for-articles.html
+++ b/call-for-articles.html
@@ -44,12 +44,12 @@ permalink: /call-for-article/
                 Inspire other people with your writing, let's write for NEXT 2019.
         </p>
       <p>The NEXT 2019 welcomes the submission of unsolicited articles by outside authors for publication consideration at NEXT magazine 2019. The magazine will primarily focus but not limited to technology and will be published during the NEXT 2019. </p>
-      <h2 class="u-type-h4">Contact Point</h2>
+ <br />     <h2 class="u-type-h4">Contact Point</h2>
       <p>For more information about submitting an article, please contact:</p>
       <p><strong>Nischal Lal Shrestha</strong>
       <br/><a href="tel:+977 9866253930">+977 9866253930</a><br />
            <a href="mailto:namaste@nischal.info.np">namaste@nischal.info.np</a></p>
-
+<br />
       <h2 class="u-type-h4">FAQs</h2>
       <h3 class="u-type-h6" >How much content is necessary to submit an article?</h3>
       <div class="u-type-body"><p>There is no restriction on the quantity of the content but we prefer articles having at least 3 paragraphs (introduction, body, and conclusion).
