--- a/rapidcoding.html
+++ b/rapidcoding.html
@@ -55,7 +55,7 @@ permalink: /rapid-coding-at-next/
         <p>Date: July 18, 2019 (First day of NEXT)<br />Time: 10:00 AM</p>
 
         <h2 class="u-type-h4">Prizes and a Certificates</h2>
-        <p> <strong>First Prize</strong>: NPR 6000 and a Certificate<br /><strong>Second Prize</strong>: NPR 3000 and a Certificate<br />
+        <p> <strong>First Prize</strong>: NPR 6,000 and a Certificate<br /><strong>Second Prize</strong>: NPR 3,000 and a Certificate<br />
         Certificate of Appreciation for 2nd and 3rd runner up.</p>
 
         <br />
@@ -79,7 +79,7 @@ permalink: /rapid-coding-at-next/
         
       <h2 class="u-type-h4">Deadline</h2>
 
-      <p>The deadline for form submission is <strong>12 July, 2019</strong>.</p>
+      <p>The deadline for form submission is <strong>July 12, 2019</strong>.</p>
       <br />
 
       <h2 class="u-type-h4">Contact Point</h2>
