--- a/fifa.html
+++ b/fifa.html
@@ -41,7 +41,7 @@ permalink: /fifa-at-next/
         
 
         <h2 class="u-type-h4">Entry Fee</h2>
-        <p>ENTRY FEE is Rs. 500 PER PERSON<p>
+        <p>The entry fee for the registration at FIFA is NPR 500 per person<p>
 
 
 
