Optimized CS GO

--- a/dota.html
+++ b/dota.html
@@ -56,7 +56,7 @@ Play Like a Pro!</p>
 
         <h2 class="u-type-h4">Rules and Regulations</h2>
 
-        <p><strong>Participants must agree upon the below mentioned rules and regulations:</strong></p>
+        <p>Participants must agree upon the below mentioned rules and regulations:</p>
 <ul>
 
     <li>The game will be played in Captain Draft mode.</p>
