--- a/fifa.html
+++ b/fifa.html
@@ -58,7 +58,7 @@ permalink: /fifa-at-next/
 
         <h2 class="u-type-h4">Rules and Regulations</h2>
 
-        <p><strong>Participants must agree upon the below mentioned rules and regulations:</strong></p>
+        <p>Participants must agree upon the below mentioned rules and regulations:</p>
 <ul>
 
     <li>Use of abusive language is strictly prohibited.</li>
