--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@ permalink: /about/
                    </div>
                    <div class="c-activity-panel__inner">
                       <p class="c-activity-panel__title">{{ event.title }}</p>
-                      <p class="c-activity-panel__body">{{ event.body }}</p>
+                      <p class="c-activity-panel__body">{{ event.body }}&nbsp;<a href="{{ event.readmore }}">Read more...</a></p>
                    </div>
                 </div>
              </div>
