--- a/programs.html
+++ b/programs.html
@@ -31,8 +31,9 @@ permalink: /programs/
           <p><strong>NEXT</strong> aims to give a chance to start, culminate new ideas and showcase students' technical expertise on different fields. The three-day grandeur will involve a series of competitions, workshops, seminars, boot camps and guest lectures by some eminent personalities.</p>
           <p>The technical events included in this event are as follows:</p></div>
 </div>
+</div>
 
- <div class="t-dark">
+<div class="t-dark">
     <div class="o-bleed o-bg o-padded-section">
        <div>
           <div class="c-ribbon">
@@ -50,13 +51,31 @@ permalink: /programs/
                       </div>
                    </div>
                    <div class="c-activity-panel__inner">
-                      <p class="c-activity-panel__title"><a href="{{ event.readmore }}">{{ event.title }}</a></p>
-                      <p class="c-activity-panel__body">{{ event.body }}&nbsp;<a href="{{ event.readmore }}">Click here for event details</a>.</p>
+                      <p class="c-activity-panel__title">{{ event.title }}</p>
+                      <p class="c-activity-panel__body">{{ event.body }}&nbsp;<a href="{{ event.readmore }}">Read more...</a></p>
                    </div>
                 </div>
-                {% endfor %} 
              </div>
+             {% endfor %} 
           </div>
+       </div>
+    </div>
+ </div>
+ 
+ <br /><br />
+ <div class="t-light">
+    <div class="o-bleed o-bg">
+       <div class="o-text-column u-mb5">
+          <h2 class="u-type-h4">Objectives</h2>
+          <p>Students become active participants in the learning process not only through the consumption of content but through critical thinking and problem solving by creating own content. So this event aims to provide following objectives:</p>
+          <ul>
+             <li>To provide students a platform to demonstrate their talent and apply their skills which help them achieve their educational and professional goals.</li>
+             <li>To connect skilled students with members of senior management of various institutions and organization and impress them with their determination and passion.</li>
+             <li>To avail the students a new learning environment  to challenge themselves and develop new learning skills.</li>
+             <li>To provide exposure and realistic outlook towards the competitive nature of real life.</li>
+             <li>To offer a chance to meet new people and learn more about the diverse fields they belong to.</li>
+             <li>To develop mutual understanding between the engineering institutions, domestic stakeholders and general public.</li>
+          </ul>
        </div>
     </div>
  </div>
