--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ layout: base
 </div>
       
 <div class="t-black">
-    <div class="o-bleed o-bg">
+    <div class="o-bleed o-bg o-padded-section">
       <div class="o-full">
         <h2 class="u-type-hero u-pt10 editable">
           What is NEXT?
