--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@ permalink: /about/
                  </div>
               </div>
               
-              {% assign organizers = site.organizer | sort: 'id' %}{% for organizer in organizers %} 
+              {% assign organizers = site.organizer | sort: 'memberid' %}{% for organizer in organizers %} 
               <div class="o-card-list__item t-light" style="">
                  <div class="c-card">
                     <div class="c-card__inner">
