Adds radio input for team's residence

--- a/hackathon_register.html
+++ b/hackathon_register.html
@@ -47,6 +47,7 @@ permalink: /hackathon-at-next/registration/
             <label class="c-form__label">College your team represents</label>
             <input type="text" required class="c-form__input" placeholder="NCIT" name="entry.1912590174">
             <br /><br />
+
             <label class="c-form__label">Team leader name</label> 
             <input type="text" required class="c-form__input" placeholder="Jane Doe" name="entry.814500606">
             <br /><br />
@@ -60,13 +61,13 @@ permalink: /hackathon-at-next/registration/
 <h3 class="u-type-h4">Participants' Information</h3>            
           
             <label class="c-form__label">Second member name</label> 
-            <input type="text" class="c-form__input" placeholder="Ram Sharma" name="entry.122768086">
+            <input type="text" required class="c-form__input" placeholder="Ram Sharma" name="entry.122768086">
             <br /><br />
             <label class="c-form__label">Phone of second member</label>
-            <input type="text" class="c-form__input" placeholder="9800000000" name="entry.82699480">
+            <input type="text" required class="c-form__input" placeholder="9800000000" name="entry.82699480">
             <br /><br />
             <label class="c-form__label">Email of second member</label> 
-            <input type="email" class="c-form__input" placeholder="hello@domain.com" name="entry.2065362199">
+            <input type="email" required class="c-form__input" placeholder="hello@domain.com" name="entry.2065362199">
             <br /><br />
             <label class="c-form__label">Third member name</label>
             <input type="text" class="c-form__input" placeholder="Jane Doe" name="entry.928667693">
@@ -78,6 +79,11 @@ permalink: /hackathon-at-next/registration/
           
             <label class="c-form__label">What do you expect from us?</label> 
             <input type="text" class="c-form__input" placeholder="I expect..." name="entry.876329403" required >
+            <br /><br />
+            <label class="c-form__label">Is the team from outside of Kathmandu Valley?</label>
+            <br/><br/><br/>
+            <input type="radio" name="entry.1248802174" value="Yes" > Yes<br/>
+            <input type="radio" name="entry.1248802174" value="No" checked> No<br/>
             <br /><br />
             <input class="c-button" type="submit" value="Register"> 
           </form>
