--- a/about.html
+++ b/about.html
@@ -31,36 +31,6 @@ permalink: /about/
           <p>NEXT is a fusion of creativity, imagination and innovation. It will be a perfect blend of entertainment technology and experience with the aim of rapid growth and development of the society. The technical events included in this event are as follows:</p>    
 </div>
 </div>
-
- <div class="t-dark">
-    <div class="o-bleed o-bg o-padded-section">
-       <div>
-          <div class="c-ribbon">
-             {% assign events = site.event %}{% for event in events %} 
-             <div class="c-ribbon__box">
-                <h3 class="c-ribbon__text" data-ribbon-left="{{ event.data-ribbon-left }}" data-ribbon-right="{{ event.data-ribbon-right}}">
-                   <button class="c-link c-link--anim c-link--as-button js-trigger-panel" data-panel="{{ event.data-panel }}">{{ event.title }}</button> 
-                </h3>
-                <div id="{{ event.data-panel }}" class="c-activity-panel js-panel">
-                   <div class="c-activity-panel__hero u-ratio" style="padding-bottom: calc((944/1442)*100%);">
-                      <div class="c-aspect-inner">
-                         <img src="{{ event.image }}" 
-                            alt="{{ event.alt }}" 
-                            class="u-responsive">
-                      </div>
-                   </div>
-                   <div class="c-activity-panel__inner">
-                      <p class="c-activity-panel__title">{{ event.title }}</p>
-                      <p class="c-activity-panel__body">{{ event.body }}&nbsp;<a href="{{ event.readmore }}">Read more...</a></p>
-                   </div>
-                </div>
-             </div>
-             {% endfor %} 
-          </div>
-       </div>
-    </div>
- </div>
- <br /><br />
  <div class="t-light">
     <div class="o-bleed o-bg">
        <div class="o-text-column u-mb5">
@@ -88,7 +58,7 @@ permalink: /about/
                 </div>
              </div>
           </div>
-          {% assign organizers = site.organizer | sort: 'id' %}{% for organizer in organizers %} 
+          {% assign organizers = site.organizer | sort: "memberid" %}{% for organizer in organizers %} 
           <div class="o-card-list__item t-light" style="">
              <div class="c-card">
                 <div class="c-card__inner">
