--- a/hackathon.html
+++ b/hackathon.html
@@ -86,7 +86,7 @@ Innovative solutions to real-world problems. </p>
 
       <p><strong>Madhav Gautam </strong>
       <br/><a href="tel:+977 9867681865">+977 9867681865</a><br />
-           <a href="mailto:mohandkl512@gmail.com">madhavgautam2016@gmail.com</a></p>
+           <a href="mailto:madhavgautam2016@gmail.com">madhavgautam2016@gmail.com</a></p>
 
       <a class="c-button c-button--outbound" href="{{ '/hackathon-at-next/registration/' | prepend: site.baseurl}}" target="_blank">Register for NEXT Hackathon</a>
         
