Removes dirty fb image links

--- a/dota.html
+++ b/dota.html
@@ -27,7 +27,7 @@ Play Like a Pro!</p>
         
           <div class="u-ratio" style="padding-bottom: calc((711/1067)*100%);">
             <div class="c-aspect-inner">
-              <img src="https://scontent.fktm7-1.fna.fbcdn.net/v/t1.0-9/66031174_448400335954144_2877197131301519360_n.jpg?_nc_cat=109&_nc_oc=AQnbH-J3mNUVpDawi6OcMQm26DNX7WbiZYUMa33Jf9Rz9doqd-miPICl_SwxY54qq3k&_nc_ht=scontent.fktm7-1.fna&oh=f71fccdefb5d7a6ca218e777a812bfb7&oe=5D784AB3" class="u-responsive" alt="Call for article" />
+              <img src="https://images.unsplash.com/photo-1457369804613-52c61a468e7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&h=600" class="u-responsive" alt="Call for article" />
             </div>
           </div>
         
