--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@ permalink: /stay-connected/
         <div class="o-full cms-editor-link">
             <h1 class="u-type-h2"><span data-cms-editor-link="cloudcannon:#title" data-cms-editor-link-style="sidebar">
 
-The Latest on <br />#NEXT</span>
+Stay Connected</span>
                 
             </h1>
         </div>
