Created faq page

--- a/programs.html
+++ b/programs.html
@@ -47,7 +47,7 @@ permalink: /programs/
                 </div>
              </div>
           </div>
-          {% assign events = site.event | %}{% for event in events %} 
+          {% assign events = site.event %}{% for event in events %} 
           <a href="{{ event.readmore }}" class="c-link c-link--anim u-type-tiny">
           <div class="o-card-list__item t-light" style="">
              <div class="c-card">
