Adds link to footer

--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@ layout: base
               <div id="{{ event.data-panel }}" class="c-activity-panel js-panel">
                 <div class="c-activity-panel__hero u-ratio" style="padding-bottom: calc((944/1442)*100%);">
                   <div class="c-aspect-inner">
-                    <img src="{{ event.image }}" 
-    alt="{{ event.alt }}" 
-    class="u-responsive">
+                    <img src="{{ event.image }}" alt="{{ event.alt }}" class="u-responsive">
                   </div>
                 </div>
                 <div class="c-activity-panel__inner">
