--- a/hackathon_register.html
+++ b/hackathon_register.html
@@ -25,7 +25,7 @@ permalink: /hackathon-at-next/registration/
         
           <div class="u-ratio" style="padding-bottom: calc((711/1067)*100%);">
             <div class="c-aspect-inner">
-              <img src="https://images.unsplash.com/photo-1531498860502-7c67cf02f657?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&h=600" class="u-responsive" alt="Call for article" />
+              <img src="https://images.unsplash.com/photo-1562255323-4d3da5b29ed4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&h=600" class="u-responsive" alt="Call for Hackathon" />
             </div>
           </div>
         
