--- a/logicbattle.html
+++ b/logicbattle.html
@@ -27,7 +27,7 @@ Show your logical and programming command.  </p>
         
           <div class="u-ratio" style="padding-bottom: calc((711/1067)*100%);">
             <div class="c-aspect-inner">
-              <img src="https://images.unsplash.com/photo-1457369804613-52c61a468e7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&h=600" class="u-responsive" alt="Call for article" />
+              <img src="https://images.unsplash.com/photo-1562255034-0b41e6d51628?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&h=600&q=60" class="u-responsive" alt="Call for article" />
             </div>
           </div>
         
