Made various changes

--- a/404.html
+++ b/404.html
@@ -3,4 +3,14 @@ layout: base
 title: Not found
 ---
 
-<h1>The page doesn't exist.</h1>
+<div class="t-light">
+        <div class="o-bleed o-bg">
+          <div class="o-full">
+            <h1 class="u-type-hero u-mb0">Oops! :'(</h1>
+            <h2 class="u-type-hero-subline u-mt1 u-ptp5 editable">
+              We couldn't serve your request.<br />
+              <a href="{{ site.url }}" class="c-link c-link--outbound u-m0">Home</a>
+            </h2>
+          </div>
+        </div>
+      </div>
