--- a/index.html
+++ b/index.html
@@ -68,9 +68,32 @@ layout: base
     </div>
   </div>
 </div>
+
+<div class="t-light">
+    <div class="o-bleed o-bg u-pt5 u-pb8">
+        <div class="o-full">
+            <h2 class="u-type-h3 u-mt0 editable">
+              NCIT<br />Balkumari, Lalitpur
+            </h2>
+            <div class="o-row u-flex-wrap-r@column-min-down">
+                <div class="o-half u-flex-self-start u-w100@column-min-down">
+                    <img src="{{ '/assets/images/college.jpg' | prepend: site.baseurl }}" 
+  alt="NCIT building" 
+  class="u-responsive u-mb-7">
+                </div>
+                <div class="o-half o-half--padded u-flex u-flex-vertical u-w100@column-min-down">
+                    <p class="u-type-panel-text u-mt0 editable">
+                      Experience the future at one of the best IT colleges in Nepal. 
+                    </p>
+                    <a href="https://goo.gl/maps/Mcp9fDzA4u9BTQNa6" rel="noreferrer noopener" target="_blank" class="c-link c-link--outbound u-type-panel-text">Directions</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
       
 <div class="t-black">
-    <div class="o-bleed o-bg o-padded-section">
+    <div class="o-bleed o-bg c-step">
       <div class="o-full">
         <h2 class="u-type-hero u-pt10 editable">
           What is NEXT?
