Corrects images and sessions

--- a/project_exhibition.html
+++ b/project_exhibition.html
@@ -27,7 +27,7 @@ Show your project at NEXT 2019.</p>
         
           <div class="u-ratio" style="padding-bottom: calc((711/1067)*100%);">
             <div class="c-aspect-inner">
-              <img src="https://images.unsplash.com/photo-1457369804613-52c61a468e7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&h=600" class="u-responsive" alt="Call for article" />
+              <img src="{{ '/assets/images/project_showcase.PNG' | prepend: site.baseurl }}" class="u-responsive" alt="Call for article" />
             </div>
           </div>
         
