--- a/project_exhibition_registration.html
+++ b/project_exhibition_registration.html
@@ -23,7 +23,7 @@ permalink: /project-exhibition-at-next/registration/
         
           <div class="u-ratio" style="padding-bottom: calc((711/1067)*100%);">
             <div class="c-aspect-inner">
-              <img src="https://images.unsplash.com/photo-1531498860502-7c67cf02f657?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&h=600" class="u-responsive" alt="Call for Projects" />
+              <img src="{{ '/assets/images/project_showcase.PNG' | prepend: site.baseurl }}" class="u-responsive" alt="Call for Projects" />
             </div>
           </div>
         
