--- a/session.html
+++ b/session.html
@@ -21,22 +21,43 @@ permalink: /session/
         <p><strong>The combined lists of all the forthcoming seminars are enlisted below:</strong></p>
         <ul>
             <li>Cyber security & Ethical hacking. (Pros and Cons)<br/>
-            18 July, Friday 11:00 to 11:45 AM</li>
+            18 July, Thursday 11:00 to 11:45 AM</li>
             <br/>
             <li>TBM tunneling First practice in case of Bheri-Babai Nepal.<br/>
-            18 July, Friday 11:00 to 11:45 AM</li>
+            18 July, Thursday 11:00 to 11:45 AM</li>
             <br/>
+            <li>AI and Big Data.
+            18 July, Thursday 12:30 to 1:15 PM</li>
             <li>Entrepreneurship, Start-up Ideas and Leadership Development.<br/>
-            18 July, Friday 12:30 to 1:45 PM</li>
-           <li>5G Technology.</li>
-            <li>WISTEM.</li>
-            <li>Digital Marketing.</li>
-            <li>AI and Big Data.</li>
-            <li>Share market and analysis.</li>
-            <li>Metro-rail and Mono-rail in Kathmandu city.</li>
-            <li>Concept and challenges in Nijgadh airport/ HSETG engineering.</li>
-            <li>Cloud and fog computing.</li>
-            <li>Crypto currency and Blockchain technology.</li>
+            18 July, Thursday 12:30 to 1:45 PM</li>
+            <br/>
+            <li>Share market and analysis.<br/>
+            18 July, Thursday 2:00 to 2:45 PM</li>
+            <br/>
+           <li>5G Technology.<br/>
+           19 July, Friday 11:00 to 11:45 AM </li>
+           <br/>
+            <li>WISTEM <br/>
+            19 July, Friday 12:30 to 1:15PM</li>
+            <br/>
+            <li>Cloud and fog computing.<br/>
+            19 July, Friday 12:30 to 1:15 PM</li>
+            <br/>
+            <li>Metro-rail and Mono-rail in Kathmandu city.
+            19 July, Friday 11:00 to 11:45 AM</li>
+            <br/>
+            <li>Crypto currency and Blockchain technology.<br/>
+            19 July, Friday 2:00 to 2:45 PM</li>            
+
+            <br/>
+            
+
+            <li>Concept and challenges in Nijgadh airport/ HSETG engineering.<br/>
+            20 July, Saturday, 11:00 to 11:45AM</li>
+            <br/>
+            <li>Digital Marketing.<br/>
+            20 July, Saturday 11:00 to 11:45AM</li>
+
         </ul>
 
 
