--- a/counterstrike.html
+++ b/counterstrike.html
@@ -8,7 +8,7 @@ permalink: /counterstrike-at-next/
       <div class="t-light">
   <div class="o-bleed o-bg">
     <div class="o-full">
-      <h1 class="u-type-h2">CS GO at NEXT<br />    
+      <h1 class="u-type-h2">CS Go<br />    
       </h1>
            
     </div>
