--- a/counterstrike_registration.html
+++ b/counterstrike_registration.html
@@ -8,7 +8,7 @@ permalink: /counterstrike-at-next/registration/
       <div class="t-light">
   <div class="o-bleed o-bg">
     <div class="o-full">
-      <h1 class="u-type-h3">Registration for Counter Strike [CS]
+      <h1 class="u-type-h3">Registration for CS Go
       </h1>
     </div>
     <div class="o-row u-no-wrap  o-row--reflow-break-reverse">
