--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ permalink: /stay-connected/
 <div class="t-light">
     <div class="o-bleed o-bg">
         <div class="o-full cms-editor-link">
-            <h1 class="u-type-h2"><span data-cms-editor-link="cloudcannon:#title" data-cms-editor-link-style="sidebar">
+            <h1 class="u-type-h2"><span>
 
 Stay Connected</span>
                 
