Semantic changes to content on the pages

--- a/hackathon.html
+++ b/hackathon.html
@@ -33,7 +33,7 @@ Innovative solutions to real-world problems. </p>
         
       </div>
     </div>
-    <div class="o-text-column u-mb5 u-mt5">
+    <div class="o-text-column u-mb5">
         <h2 class="u-type-h4">Hackathon Format</h2>
         <p>NEXT hackathon is scheduled into 3 days as follows:</p>
 
