--- a/fifa.html
+++ b/fifa.html
@@ -8,7 +8,7 @@ permalink: /fifa-at-next/
       <div class="t-light">
   <div class="o-bleed o-bg">
     <div class="o-full">
-      <h1 class="u-type-h2">FIFA 19 at NEXT<br />    
+      <h1 class="u-type-h2">FIFA 19<br />    
       </h1>
            
     </div>
