Adds larger image for project showcase

--- a/session.html
+++ b/session.html
@@ -43,7 +43,7 @@ permalink: /session/
         <strong>Seminars</strong> in this event are designed to provide research talks, debate into the hot topics affecting engineers and technicians across the globe. It is a great place to test out some new ideas or theories that you have been thinking about but aren’t 100% confident with yet. The seminars will be led by experienced engineer, researcher and experts from various backgrounds. These seminars plan to include interactive engineering debate to ensure the maximum benefit for all participants.
         </p>
 
-        <p><strong>The combined lists of all the forthcoming seminars are (will be) enlisted below:</strong></p>
+        <p><strong>The combined lists of all the forthcoming seminars are enlisted below:</strong></p>
         <ul>
             <li>Cyber security & Ethical hacking. (Pros and Cons)<br/>
             18 July, Thursday 11:00 to 11:45 AM</li>
@@ -51,8 +51,9 @@ permalink: /session/
             <li>TBM tunneling First practice in case of Bheri-Babai Nepal.<br/>
             18 July, Thursday 11:00 to 11:45 AM</li>
             <br/>
-            <li>AI and Big Data.
+            <li>AI and Big Data.<br/>
             18 July, Thursday 12:30 to 1:15 PM</li>
+            <br/>
             <li>Entrepreneurship, Start-up Ideas and Leadership Development.<br/>
             18 July, Thursday 12:30 to 1:45 PM</li>
             <br/>
