Adds images to games

--- a/counterstrike.html
+++ b/counterstrike.html
@@ -27,7 +27,7 @@ permalink: /counterstrike-at-next/
         
           <div class="u-ratio" style="padding-bottom: calc((711/1067)*100%);">
             <div class="c-aspect-inner">
-              <img src="https://images.unsplash.com/photo-1457369804613-52c61a468e7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&h=600" class="u-responsive" alt="Call for article" />
+              <img src="https://images.unsplash.com/photo-1542751371-adc38448a05e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&q=600" class="u-responsive" alt="Play CS Go" />
             </div>
           </div>
         
