--- a/pubgmobile.html
+++ b/pubgmobile.html
@@ -27,7 +27,7 @@ The best Chicken Dinner you'll ever had.</p>
         
           <div class="u-ratio" style="padding-bottom: calc((711/1067)*100%);">
             <div class="c-aspect-inner">
-              <img src="https://images.unsplash.com/photo-1457369804613-52c61a468e7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&h=600" class="u-responsive" alt="Call for article" />
+              <img src="https://images.unsplash.com/photo-1557461762-e08315322e3d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&h=600" class="u-responsive" alt="PUBG Mobile" />
             </div>
           </div>
         
