--- a/games.html
+++ b/games.html
@@ -25,7 +25,7 @@ permalink: /games/
               
                 <div class="u-ratio" style="padding-bottom: calc((711/1067)*100%);">
                   <div class="c-aspect-inner">
-                    <img src="https://images.unsplash.com/photo-1493711662062-fa541adb3fc8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&h=600" class="u-responsive" alt="Call for article" />
+                    <img src="https://images.unsplash.com/photo-1493711662062-fa541adb3fc8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&h=600" class="u-responsive" alt="Play games at NEXT" />
                   </div>
                 </div>
               
