Adds beautiful image for Logic Battle

--- a/logicbattle.html
+++ b/logicbattle.html
@@ -27,7 +27,7 @@ Show your logical and programming command.  </p>
         
           <div class="u-ratio" style="padding-bottom: calc((711/1067)*100%);">
             <div class="c-aspect-inner">
-              <img src="{{ '/assets/images/Logic_battle.PNG' | prepend: site.baseurl }}" class="u-responsive" alt="Call for article" />
+              <img src="https://images.unsplash.com/photo-1556075798-4825dfaaf498?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&h=600" class="u-responsive" alt="Call for article" />
             </div>
           </div>
         
