--- a/dota_registration.html
+++ b/dota_registration.html
@@ -79,7 +79,7 @@ permalink: /dota-at-next/registration/
                     
                     <h3 class="u-type-h4">Substitute</h3>            
                   
-                    <label class="c-form__label">Substitute Member Name (NPR 500 for substitute)</label> 
+                    <label class="c-form__label">Substitute Member Name </label> 
                     <input type="text" class="c-form__input" placeholder="John Shah" name="entry.1381995059"  required >
                     <br /><br />
                     <input class="c-button" type="submit" value="Register"> 
