--- a/counterstrike_registration.html
+++ b/counterstrike_registration.html
@@ -74,7 +74,7 @@ permalink: /counterstrike-at-next/registration/
                     
                     <h3 class="u-type-h4">Substitute</h3>            
                   
-                    <label class="c-form__label">Substitute Member Name (NPR 500 for substitute member)</label> 
+                    <label class="c-form__label">Substitute Member Name </label> 
                     <input type="text" class="c-form__input" placeholder="John Shah" name="entry.419178136" required >
                     <br /><br />
                     <input class="c-button" type="submit" value="Register"> 
