--- a/index.html
+++ b/index.html
@@ -89,9 +89,23 @@ layout: base
         </div>
     </div>
 </div>
-      
+<div class="t-light">
+  <div class="o-bleed o-bg">
+      <div class="o-row t-black">
+          <div class="o-bg o-over-half o-over-half--padded u-w100@mobile-menu-down">
+              <p class="u-type-panel-text">
+                Hear from Asgar Ali<br />CEO of eSewa
+              </p>
+              <p class="u-type-faint">An IT Passionate with over 14 years of experience including software product design, materialization, roll out plan execution, business operations and strategy. </p>
+            </div>
+          <div class="c-contact__kappa o-under-half">
+              <img src="{{ '/assets/images/sessions/asgar_ali.jpg ' | prepend: site.baseurl }}" alt="Asgar Ali at Mobile World Congress" class="u-responsive u-flex-self-end u-mb-5">
+          </div>
+      </div>
+  </div>
+</div>      
 <div class="t-black">
-    <div class="o-bleed o-bg c-step">
+    <div class="o-bleed o-bg c-step u-mt0">
       <div class="o-full">
         <h2 class="u-type-hero u-pt10 editable">
           What is NEXT?
