--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ layout: base
   <div class="o-bleed o-bg u-pb8 u-pt8">
       <div class="o-full">
               <p class="u-type-panel-text">
-                <a class="c-link c-link--inline u-text-no-wrap" href="/faq">News/Announcements</a>
+                <a class="c-link c-link--inline u-text-no-wrap" href="{{ '/news-and-announcements/' | prepend: site.baseurl }}">News/Announcements</a>
               </p>
               {% assign announcements = site.announcement %}{% for announcement in announcements %}
               <a target="_blank" rel="noreferrer noopener" class="c-link c-link--outbound u-type-h3 u-pl0" href="{{ announcement.link }}">{{ announcement.title }}</a><br /><br />
