--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ layout: base
               <p class="u-type-panel-text">
                 Hear from Asgar Ali<br />CEO of eSewa
               </p>
-              <p class="u-type-faint">An IT Passionate with over 14 years of experience including software product design, materialization, roll out plan execution, business operations and strategy. </p>
+              <p class="u-type-faint">An IT passionate with over 14 years of experience including software product design, materialization, roll out plan execution, business operations and strategy. </p>
             </div>
           <div class="c-contact__kappa o-under-half">
               <img src="{{ '/assets/images/sessions/asgar_ali.jpg ' | prepend: site.baseurl }}" alt="Asgar Ali at Mobile World Congress" class="u-responsive u-flex-self-end u-mb-5">
