Changes image for rapidcoding

--- a/rapidcoding_registration.html
+++ b/rapidcoding_registration.html
@@ -25,7 +25,7 @@ permalink: /rapid-coding-at-next/registration/
         
           <div class="u-ratio" style="padding-bottom: calc((711/1067)*100%);">
             <div class="c-aspect-inner">
-              <img src="{{ '/assets/images/Rapid_Coding_Tournament.PNG' | prepend: site.baseurl }}" class="u-responsive" alt="Call for article" />
+              <img src="https://images.unsplash.com/photo-1548292087-9e64496b7184?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&h=600" class="u-responsive" alt="Call for article" />
             </div>
           </div>
         
