Added a brief summary and navigation

--- a/session.html
+++ b/session.html
@@ -33,6 +33,18 @@ permalink: /session/
     
 
       <div class="o-text-column u-mb5 u-mt5">
+
+        <p><strong>NEXT Sessions</strong> are designed to provide research talks, debate into the hot topics affecting engineers and technicians across the globe. There are 3 types of sessions being organized at NEXT as:</p>
+        <h3 class="c-ribbon__text" data-ribbon-left="NEXT Seminar NEXT Seminar" data-ribbon-right=" Seminar Seminar Seminar Seminar Seminar Seminar Seminar Seminar">
+            <a class="c-link c-link--anim" target="_blank" rel="noreferrer noopener" href="">NEXT Seminar</a>
+        </h3>
+        <h3 class="c-ribbon__text" data-ribbon-left="Talk Talk Talk Talk " data-ribbon-right=" Tech Talk Tech Talk Tech Talk Tech Talk Tech Talk Tech Talk">
+            <a class="c-link c-link--anim" target="_blank" rel="noreferrer noopener" href="">NEXT Tech Talk</a>
+        </h3>
+        <h3 class="c-ribbon__text" data-ribbon-left="Workshop Workshop Workshop Workshop Workshop " data-ribbon-right=" NEXT Workshop NEXT Workshop NEXT Workshop NEXT Workshop NEXT Workshop">
+            <a class="c-link c-link--anim" target="_blank" rel="noreferrer noopener" href="">NEXT Workshop</a>
+        </h3>
+        <p>The sessions will be led by experienced engineers, researchers and experts from various backgrounds. These sessions plan to include interactive engineering debate to ensure the maximum benefit for all participants.</p>
       <h2 class="u-type-h4">NEXT Seminar</h2>
           <p>
           <strong>Seminars</strong> are prestigious part of NEXT event, so they are the place where you most want the opportunity to discuss and chime in with your thoughts on the topics at hand.  This allows for opening up the floor for discussion pertaining to the engineering world and hearing about other ideas on the topic.
