--- a/session.html
+++ b/session.html
@@ -36,18 +36,18 @@ permalink: /session/
 
         <p><strong>NEXT Sessions</strong> are designed to provide research talks, debate into the hot topics affecting engineers and technicians across the globe. There are 3 types of sessions being organized at NEXT as:</p>
         <h3 class="c-ribbon__text" data-ribbon-left="NEXT Seminar NEXT Seminar" data-ribbon-right=" Seminar Seminar Seminar Seminar Seminar Seminar Seminar Seminar">
-            <a class="c-link c-link--anim" rel="noreferrer noopener" href="#next-seminar">NEXT Seminar</a>
+            <a class="c-link c-link--anim" rel="noreferrer noopener" href="#next-seminars">NEXT Seminars</a>
         </h3>
         <h3 class="c-ribbon__text" data-ribbon-left="Talk Talk Talk Talk " data-ribbon-right=" Tech Talk Tech Talk Tech Talk Tech Talk Tech Talk Tech Talk">
-            <a class="c-link c-link--anim" rel="noreferrer noopener" href="#next-techtalk">NEXT Tech Talk</a>
+            <a class="c-link c-link--anim" rel="noreferrer noopener" href="#next-techtalks">NEXT Tech Talks</a>
         </h3>
         <h3 class="c-ribbon__text" data-ribbon-left="Workshop Workshop Workshop Workshop Workshop " data-ribbon-right=" NEXT Workshop NEXT Workshop NEXT Workshop NEXT Workshop NEXT Workshop">
-            <a class="c-link c-link--anim" rel="noreferrer noopener" href="#next-workshop">NEXT Workshop</a>
+            <a class="c-link c-link--anim" rel="noreferrer noopener" href="#next-workcamps">NEXT Workcamps</a>
         </h3>
         <p>The sessions will be led by experienced engineers, researchers and experts from various backgrounds. These sessions plan to include interactive engineering debate to ensure the maximum benefit for all participants.</p>
  
  <br />
-        <h2 class="u-type-h4" id="next-seminar">NEXT Seminar</h2>
+        <h2 class="u-type-h4" id="next-seminars">NEXT Seminar</h2>
           <p>
           <strong>Seminars</strong> are prestigious part of NEXT event, so they are the place where you most want the opportunity to discuss and chime in with your thoughts on the topics at hand.  This allows for opening up the floor for discussion pertaining to the engineering world and hearing about other ideas on the topic.
           </p>
@@ -99,8 +99,8 @@ permalink: /session/
 </div>
 
 
-      <div class="o-text-column u-mb5 u-mt5" id="next-techtalk">
-          <h2 class="u-type-h4">NEXT Tech Talk</h2>
+      <div class="o-text-column u-mb5 u-mt5" id="next-techtalks">
+          <h2 class="u-type-h4">NEXT Tech Talks</h2>
 
           <p><strong>Tech-talk</strong> are another important part of the NEXT event that hosts platform for technology based topics. </p>
 
@@ -143,7 +143,7 @@ permalink: /session/
 </div>
 
 
-      <div class="o-text-column u-mb5 u-mt5" id="next-workshop">
+      <div class="o-text-column u-mb5 u-mt5" id="next-workcamps">
           <h2 class="u-type-h4">Workcamps</h2>
 
          <p>
