--- a/games.html
+++ b/games.html
@@ -40,7 +40,8 @@ permalink: /games/
               <br/>
               <h2 class="u-type-h4">Technical Games</h2>
               <p>The following technical games are available:</p>
-              <h3 class="c-ribbon__text" data-ribbon-left="PUBG Mobile PUBG Mobile PUBG Mobile " data-ribbon-right=" PUBG PUBG PUBG PUBG PUBG PUBG PUBG ">
+     <div class="c-ribbon">        
+ <h3 class="c-ribbon__text" data-ribbon-left="PUBG Mobile PUBG Mobile PUBG Mobile " data-ribbon-right=" PUBG PUBG PUBG PUBG PUBG PUBG PUBG ">
                     <a class="c-link c-link--anim c-link--outbound" target="_blank" rel="noreferrer noopener" href="{{ '/pubg-mobile-at-next/' | prepend: site.baseurl }}">PUBG Mobile</a>
                 </h3>
                 
@@ -55,6 +56,7 @@ permalink: /games/
                 <h3 class="c-ribbon__text" data-ribbon-left="Counter Strike Counter Strike " data-ribbon-right=" CS Go CS Go CS Go CS Go CS Go CS Go CS Go CS Go CS Go CS Go">
                         <a class="c-link c-link--anim c-link--outbound" target="_blank" rel="noreferrer noopener" href="{{ '/counterstrike-at-next/' | prepend: site.baseurl }}">CS Go</a>
                     </h3>   
+</div>
                     <br />
 
                     <h2 class="u-type-h4">Non Technical Games</h2>
