--- a/games.html
+++ b/games.html
@@ -61,7 +61,8 @@ permalink: /games/
 
                     <h2 class="u-type-h4">Non Technical Games</h2>
                     <p>The following non technical games are available:</p>
-                    <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">Dart Throw</a>
+       <div class="c-ribbon">      
+     <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">Dart Throw</a>
                       </h3>
                       <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">Fussball</a>
                         </h3>
@@ -70,12 +71,13 @@ permalink: /games/
                             <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">Treasure Hunt</a> 
                                 </h3> 
 
-
+</div>
 
 
                   <h2 class="u-type-h4">Vintage Games</h2>
                     <p>The following vintage games are available:</p>
-                      <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">ROADRASH</a>
+                <div class="c-ribbon">
+      <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">ROADRASH</a>
                       </h3>
                       <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">NEED FOR SPEED 2000</a>
                       </h3>
@@ -92,7 +94,7 @@ permalink: /games/
                                 <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">STREET FIGHTER(PLAYSTATION)</a> 
                                 </h3>
 
-                              
+                              </div>
                                 
                                 </div>
 
