--- a/session.html
+++ b/session.html
@@ -35,7 +35,8 @@ permalink: /session/
       <div class="o-text-column u-mb5 u-mt5">
 
         <p><strong>NEXT Sessions</strong> are designed to provide research talks, debate into the hot topics affecting engineers and technicians across the globe. There are 3 types of sessions being organized at NEXT as:</p>
-        <h3 class="c-ribbon__text" data-ribbon-left="NEXT Seminar NEXT Seminar" data-ribbon-right=" Seminar Seminar Seminar Seminar Seminar Seminar Seminar Seminar">
+   <div class="c-ribbon">
+     <h3 class="c-ribbon__text" data-ribbon-left="NEXT Seminar NEXT Seminar" data-ribbon-right=" Seminar Seminar Seminar Seminar Seminar Seminar Seminar Seminar">
             <a class="c-link c-link--anim" rel="noreferrer noopener" href="#next-seminars">NEXT Seminars</a>
         </h3>
         <h3 class="c-ribbon__text" data-ribbon-left="Talk Talk Talk Talk " data-ribbon-right=" Tech Talk Tech Talk Tech Talk Tech Talk Tech Talk Tech Talk">
@@ -45,7 +46,7 @@ permalink: /session/
             <a class="c-link c-link--anim" rel="noreferrer noopener" href="#next-workcamps">NEXT Workcamps</a>
         </h3>
         <p>The sessions will be led by experienced engineers, researchers and experts from various backgrounds. These sessions plan to include interactive engineering debate to ensure the maximum benefit for all participants.</p>
- 
+ </div>
  <br />
         <h2 class="u-type-h4" id="next-seminars">NEXT Seminar</h2>
           <p>
