--- a/robo_racing.html
+++ b/robo_racing.html
@@ -27,7 +27,7 @@ permalink: /robo-racing-at-next/
         
           <div class="u-ratio" style="padding-bottom: calc((711/1067)*100%);">
             <div class="c-aspect-inner">
-              <img src="https://images.unsplash.com/photo-1550944924-52de9d276152?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&h=600" class="u-responsive" alt="Robo Racing" />
+              <img src="{{ '/assets/images/events/robo_racing.jpg' | prepend: site.baseurl }}" class="u-responsive" alt="Robo Racing" />
             </div>
           </div>
         
