Adds hackathon image with correct extension

--- a/hackathon.html
+++ b/hackathon.html
@@ -27,7 +27,7 @@ Innovative solutions to real-world problems. </p>
         
           <div class="u-ratio" style="padding-bottom: calc((711/1067)*100%);">
             <div class="c-aspect-inner">
-              <img src="{{ '/assets/images/hackathon.PNG' | prepend: site.baseurl }}" class="u-responsive" alt="Hackathon" />
+              <img src="{{ '/assets/images/events/hackathon.png' | prepend: site.baseurl }}" class="u-responsive" alt="Hackathon" />
             </div>
           </div>
         
