Removes unwanted images and lines

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@ permalink: /about/
       <div class="o-text-column u-mb5 u-mt5">
           <p><strong>NCIT Expo on Technology, “NEXT”</strong> will be the first ever nationwide fest on IT going to be organized by Nepal College of Information and Technology. This event involves an active participation of students from more than 37 affiliated colleges of Pokhara University, +2 colleges within the valley and other engineering colleges.</p>
           <p>NEXT will give a chance to start, culminate new ideas and showcase student’s technical expertise on different fields. The fest will be a three-day grandeur which involves a series of competitions, workshops, seminars, boot camps and guest lectures by some eminent personalities.</p>
-          <p>NEXT is a fusion of creativity, imagination and innovation. It will be a perfect blend of entertainment technology and experience with the aim of rapid growth and development of the society. The technical events included in this event are as follows:</p>    
+          <p>NEXT is a fusion of creativity, imagination and innovation. It will be a perfect blend of entertainment technology and experience with the aim of rapid growth and development of the society.</p>    
 </div>
 </div>
  <div class="t-light">
